[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://scripts/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://level_tiles.tres" type="TileSet" id=4]
[ext_resource path="res://scenes/PowerSkull.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/PlayerInfoUI.gd" type="Script" id=6]
[ext_resource path="res://sprites/items/powerskull_color.png" type="Texture" id=7]
[ext_resource path="res://scripts/SkullSpawner.gd" type="Script" id=8]
[ext_resource path="res://scenes/Chest.tscn" type="PackedScene" id=9]
[ext_resource path="res://grass_bricks_tiles.tres" type="TileSet" id=10]

[node name="Main" type="Node2D"]
script = ExtResource( 2 )

[node name="SkullSpawner" type="Node" parent="."]
script = ExtResource( 8 )
powerskull_scene = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="." groups=["level"]]
tile_set = ExtResource( 4 )
cell_size = Vector2( 32, 32 )
collision_layer = 2
format = 1
tile_data = PoolIntArray( 65514, -1610612735, 0, 52, -1073741821, 0, 131050, -1610612735, 0, 65588, -1073741822, 0, 196586, -1610612735, 0, 131124, -1073741824, 0, 262122, -1610612734, 0, 196660, -1073741821, 0, 327658, -1610612733, 0, 262196, -1073741823, 0, 393194, -1610612733, 0, 327732, -1073741821, 0, 458730, -1610612736, 0, 393268, -1073741824, 0, 524266, -1610612733, 0, 458804, -1073741824, 0, 589802, -1610612736, 0, 524340, -1073741821, 0, 655338, -1610612735, 0, 589876, -1073741824, 0, 720874, -1610612735, 0, 655412, -1073741824, 0, 786410, -1610612735, 0, 720948, -1073741824, 0, 851946, -1610612736, 0, 786484, -1073741821, 0, 917482, -1610612733, 0, 852020, -1073741821, 0, 983018, -1610612735, 0, 917556, -1073741822, 0, 1048554, -1610612733, 0, 983092, -1073741823, 0, 1114090, -1610612736, 0, 1048628, -1073741821, 0, 1179626, -1610612735, 0, 1114164, -1073741821, 0, 1245162, -1610612736, 0, 1179700, -1073741821, 0, 1310698, -1610612736, 0, 1245236, -1073741823, 0, 1376234, -1610612736, 0, 1310772, -1073741823, 0, 1441770, -1610612735, 0, 1376308, -1073741823, 0, 1507306, -1610612733, 0, 1441844, -1073741824, 0, 1572842, -1610612733, 0, 1507380, -1073741823, 0, 1638378, -1610612734, 0, 1572916, -1073741824, 0, 1703914, -1610612734, 0, 1638452, -1073741824, 0, 1769450, -1610612734, 0, 1703988, -1073741822, 0, 1834986, -1610612735, 0, 1769524, -1073741824, 0, 1900522, -1610612736, 0, 1835060, -1073741822, 0, 1966058, -1610612734, 0, 1900596, -1073741824, 0, 2031594, -1610612735, 0, 1966132, -1073741824, 0, 2097130, -1610612733, 0, 2097143, 0, 0, 2097144, 0, 0, 2097145, 0, 0, 2097146, 0, 0, 2097147, 0, 0, 2097148, 0, 0, 2097149, 0, 0, 2097150, 0, 0, 2097151, 0, 0, 2031616, 0, 0, 2031617, 0, 0, 2031618, 0, 0, 2031619, 0, 0, 2031620, 0, 0, 2031621, 0, 0, 2031622, 0, 0, 2031623, 0, 0, 2031624, 0, 0, 2031625, 0, 0, 2031639, 0, 0, 2031640, 0, 0, 2031641, 0, 0, 2031642, 0, 0, 2031643, 0, 0, 2031644, 0, 0, 2031645, 0, 0, 2031646, 0, 0, 2031647, 0, 0, 2031648, 0, 0, 2031649, 0, 0, 2031650, 0, 0, 2031651, 0, 0, 2031652, 0, 0, 2031653, 0, 0, 2031668, -1073741822, 0, 2162666, -1610612733, 0, 2097204, -1073741823, 0, 2228202, -1610612733, 0, 2162740, -1073741823, 0, 2293738, -1610612733, 0, 2228276, -1073741821, 0, 2359274, -1610612734, 0, 2293812, -1073741823, 0, 2424810, -1610612734, 0, 2359348, -1073741822, 0, 2490346, -1610612733, 0, 2424884, -1073741824, 0, 2555883, 1, 0, 2555884, 2, 0, 2555885, 2, 0, 2555886, 0, 0, 2555887, 2, 0, 2555888, 3, 0, 2555889, 0, 0, 2555890, 0, 0, 2555891, 0, 0, 2555892, 2, 0, 2555893, 1, 0, 2555894, 1, 0, 2555895, 2, 0, 2555896, 0, 0, 2555897, 0, 0, 2555898, 0, 0, 2555899, 1, 0, 2555900, 3, 0, 2555901, 3, 0, 2555902, 2, 0, 2555903, 2, 0, 2490368, 1, 0, 2490369, 0, 0, 2490370, 0, 0, 2490371, 2, 0, 2490372, 0, 0, 2490373, 0, 0, 2490374, 3, 0, 2490375, 0, 0, 2490376, 2, 0, 2490377, 3, 0, 2490378, 0, 0, 2490379, 2, 0, 2490380, 1, 0, 2490381, 0, 0, 2490382, 0, 0, 2490383, 3, 0, 2490384, 2, 0, 2490385, 0, 0, 2490386, 1, 0, 2490387, 3, 0, 2490388, 3, 0, 2490389, 1, 0, 2490390, 2, 0, 2490391, 1, 0, 2490392, 1, 0, 2490393, 3, 0, 2490394, 2, 0, 2490395, 2, 0, 2490396, 2, 0, 2490397, 1, 0, 2490398, 2, 0, 2490399, 1, 0, 2490400, 2, 0, 2490401, 2, 0, 2490402, 1, 0, 2490403, 0, 0, 2490404, 2, 0, 2490405, 3, 0, 2490406, 3, 0, 2490407, 1, 0, 2490408, 2, 0, 2490409, 1, 0, 2490410, 2, 0, 2490411, 3, 0, 2490412, 2, 0, 2490413, 0, 0, 2490414, 1, 0, 2490415, 1, 0, 2490416, 2, 0, 2490417, 0, 0, 2490418, 1, 0, 2490419, 3, 0 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 3 )
move_speed = 1.0
min_zoom = 0.75
max_zoom = 1000
margin = Vector2( 400, 100 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 1408, 1152 )

[node name="PowerSkull" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 896 )

[node name="PowerSkull2" parent="." instance=ExtResource( 5 )]
position = Vector2( 544, 960 )
powerskull_type = 1

[node name="PowerSkull3" parent="." instance=ExtResource( 5 )]
position = Vector2( 960, 896 )
powerskull_type = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/UI"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Player1Info" type="HBoxContainer" parent="CanvasLayer/UI/HBoxContainer"]
margin_right = 392.0
margin_bottom = 128.0
script = ExtResource( 6 )

[node name="Skull1" type="TextureRect" parent="CanvasLayer/UI/HBoxContainer/Player1Info"]
modulate = Color( 0.411765, 0.411765, 0.411765, 1 )
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 7 )

[node name="Skull2" type="TextureRect" parent="CanvasLayer/UI/HBoxContainer/Player1Info"]
modulate = Color( 0.411765, 0.411765, 0.411765, 1 )
margin_left = 132.0
margin_right = 260.0
margin_bottom = 128.0
texture = ExtResource( 7 )

[node name="Skull3" type="TextureRect" parent="CanvasLayer/UI/HBoxContainer/Player1Info"]
modulate = Color( 0.411765, 0.411765, 0.411765, 1 )
margin_left = 264.0
margin_right = 392.0
margin_bottom = 128.0
texture = ExtResource( 7 )

[node name="Player2Info" type="HBoxContainer" parent="CanvasLayer/UI/HBoxContainer"]
margin_left = 396.0
margin_right = 788.0
margin_bottom = 128.0
script = ExtResource( 6 )

[node name="Skull1" type="TextureRect" parent="CanvasLayer/UI/HBoxContainer/Player2Info"]
modulate = Color( 0.411765, 0.411765, 0.411765, 1 )
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 7 )

[node name="Skull2" type="TextureRect" parent="CanvasLayer/UI/HBoxContainer/Player2Info"]
modulate = Color( 0.411765, 0.411765, 0.411765, 1 )
margin_left = 132.0
margin_right = 260.0
margin_bottom = 128.0
texture = ExtResource( 7 )

[node name="Skull3" type="TextureRect" parent="CanvasLayer/UI/HBoxContainer/Player2Info"]
modulate = Color( 0.411765, 0.411765, 0.411765, 1 )
margin_left = 264.0
margin_right = 392.0
margin_bottom = 128.0
texture = ExtResource( 7 )

[node name="Player3Info" type="HBoxContainer" parent="CanvasLayer/UI/HBoxContainer"]
margin_left = 792.0
margin_right = 1184.0
margin_bottom = 128.0
script = ExtResource( 6 )

[node name="Skull1" type="TextureRect" parent="CanvasLayer/UI/HBoxContainer/Player3Info"]
modulate = Color( 0.411765, 0.411765, 0.411765, 1 )
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 7 )

[node name="Skull2" type="TextureRect" parent="CanvasLayer/UI/HBoxContainer/Player3Info"]
modulate = Color( 0.411765, 0.411765, 0.411765, 1 )
margin_left = 132.0
margin_right = 260.0
margin_bottom = 128.0
texture = ExtResource( 7 )

[node name="Skull3" type="TextureRect" parent="CanvasLayer/UI/HBoxContainer/Player3Info"]
modulate = Color( 0.411765, 0.411765, 0.411765, 1 )
margin_left = 264.0
margin_right = 392.0
margin_bottom = 128.0
texture = ExtResource( 7 )

[node name="Player4Info" type="HBoxContainer" parent="CanvasLayer/UI/HBoxContainer"]
margin_left = 1188.0
margin_right = 1580.0
margin_bottom = 128.0
script = ExtResource( 6 )

[node name="Skull1" type="TextureRect" parent="CanvasLayer/UI/HBoxContainer/Player4Info"]
modulate = Color( 0.411765, 0.411765, 0.411765, 1 )
margin_right = 128.0
margin_bottom = 128.0
texture = ExtResource( 7 )

[node name="Skull2" type="TextureRect" parent="CanvasLayer/UI/HBoxContainer/Player4Info"]
modulate = Color( 0.411765, 0.411765, 0.411765, 1 )
margin_left = 132.0
margin_right = 260.0
margin_bottom = 128.0
texture = ExtResource( 7 )

[node name="Skull3" type="TextureRect" parent="CanvasLayer/UI/HBoxContainer/Player4Info"]
modulate = Color( 0.411765, 0.411765, 0.411765, 1 )
margin_left = 264.0
margin_right = 392.0
margin_bottom = 128.0
texture = ExtResource( 7 )

[node name="Player2" parent="." instance=ExtResource( 1 )]
position = Vector2( 384, 1152 )
enabled = false

[node name="Chest" parent="." instance=ExtResource( 9 )]
position = Vector2( 1152, 1216 )

[node name="TileMap2" type="TileMap" parent="."]
tile_set = ExtResource( 10 )
cell_size = Vector2( 32, 32 )
format = 1
